logs/backend_20251214.log

> Customer Management Interface@0.1.0 server
> ts-node --project tsconfig.server.json server/index.ts

[dotenv@17.2.3] injecting env (1) from .env.local -- tip: 🛠️  run anywhere with `dotenvx run -- yourcommand`
H:\INTERNAL_TOOLS\Tuttle_Customer_Mapping\node_modules\ts-node\src\index.ts:859
    return new TSError(diagnosticText, diagnosticCodes, diagnostics);
           ^
TSError: ⨯ Unable to compile TypeScript:
server/routes/logger.ts(173,18): error TS2678: Type '"delete"' is not comparable to type '"edit" | "insert"'.

    at createTSError (H:\INTERNAL_TOOLS\Tuttle_Customer_Mapping\node_modules\ts-node\src\index.ts:859:12)
    at reportTSError (H:\INTERNAL_TOOLS\Tuttle_Customer_Mapping\node_modules\ts-node\src\index.ts:863:19)
    at getOutput (H:\INTERNAL_TOOLS\Tuttle_Customer_Mapping\node_modules\ts-node\src\index.ts:1077:36)
    at Object.compile (H:\INTERNAL_TOOLS\Tuttle_Customer_Mapping\node_modules\ts-node\src\index.ts:1433:41)
    at Module.m._compile (H:\INTERNAL_TOOLS\Tuttle_Customer_Mapping\node_modules\ts-node\src\index.ts:1617:30)
    at node:internal/modules/cjs/loader:1893:10
    at Object.require.extensions.<computed> [as .ts] (H:\INTERNAL_TOOLS\Tuttle_Customer_Mapping\node_modules\ts-node\src\index.ts:1621:12)
    at Module.load (node:internal/modules/cjs/loader:1481:32)
    at Module._load (node:internal/modules/cjs/loader:1300:12)
    at TracingChannel.traceSync (node:diagnostics_channel:328:14) {
  diagnosticCodes: [ 2678 ]
}
